re PR target/37939 (CRIS port: no addi insn)

PR target/37939
	* config/cris/cris.c (cris_rtx_costs) <MULT>: Return 0 for an ADDI
	operand.

From-SVN: r141524